--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <head>
   </head>
   <body>
-    <p style="color:black; background-color:white;">
+    <p style="color:black; background-color:orange;">
       The Greatest Achievement
     </p>
   </body>
